Prefer local static assets and auto-link local CSS